feat: list shelter and shelter details
